<resources>
    <string name="app_name">SunsetAndSunrise</string>
    <string name="sunrise_time_for_chosen_location">Sunrise time for chosen location:</string>
    <string name="sunset_time_for_chosen_location">Sunset time for chosen location:</string>
    <string name="select_location">Select location</string>
    <string name="use_current">Use current location</string>
    <string name="point_on_map">Point on map</string>
    <string name="line">-</string>
    <string name="sunset">sunset</string>
    <string name="sunrise">sunrise</string>
    <string name="https_sunrise_sunset_org">
        <a href = "https://sunrise-sunset.org"> We use free sunset/sunrise API </a>
    </string>
</resources>
